--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.51MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.70MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: jj01.nfeng6.pp.ua, port: 39052, type: vmess, uuid: 025f4054-7985-38c3-8f62-6e50f098ad3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-1.02MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-4.00MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.75MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.94MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.54MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-508.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc12.98848.xyz, port: 19222, type: trojan, password: 2b815eb6-3982-4f09-9181-3c02c479d4d1, sni: bai-piao-wang-zhe-iplc12.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-678.1KB/s(Youtube:不良林), server: jj01.nfeng6.pp.ua, port: 39052, type: vmess, uuid: 025f4054-7985-38c3-8f62-6e50f098ad3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-346.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-395.9KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-403.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-508.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-678.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-395.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-403.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
