--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-319.6KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇰🇷 韩国-478.6KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-868.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-311.7KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.43MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-302.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-740.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-868.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-311.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-706.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
