--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-311.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-178.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.76MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-705.0KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇯🇵 日本-2.08MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.56MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 台湾-572.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-330.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-303.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.32MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.97MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-311.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-648.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-705.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-572.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇩🇪 德国-330.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
